# KKD

./: .gitignore  README.md  pyproject.toml
lista1/: entropy_analyzer.py
lista2/: dynamo_huff.py  encoder.py  node.py
lista3/: compress_stats.py  elias.py  fib.py  lzw.py
lista4/: encoder.py  main.py  predictors.py  tga.py
lista5/: lgb.py  main.py  quantization.py  tga.py
lista6/: README.md  config.py  differential.py  gamma.py  main.py  pass_filters.py  stats.py  tga.py
lista7/: bin_utils.py  compare.py  decoder.py  encoder.py  noise.py
