[tool.poetry]
name = "kkd"
version = "0.1.0"
description = ""
authors = ["Paweł Rubin <pawelrubin19@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
ipython = "^7.14.0"
black = {version = "^19.10b0", allow-prereleases = true}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
